# gr-verilog

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md
apps/: CMakeLists.txt  verilog_axi_bb_demo.grc  verilog_axi_ff_demo.grc  verilog_axi_ii_demo.grc  verilog_axi_ss_demo.grc
cmake/Modules/: gnuradio-verilogConfig.cmake  verilogConfig.cmake
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox
grc/: CMakeLists.txt  grverilog_verilog_axi_xx.block.yml
include/gnuradio/verilog/: api.h  constants.h  verilog_axi_bb.h  verilog_axi_cc.h  verilog_axi_ff.h  verilog_axi_ii.h  verilog_axi_ss.h
lib/: CMakeLists.txt  Shared_lib.cpp  Shell_cmd.cpp  constants.cc.in  verilog_axi_bb_impl.cc  verilog_axi_bb_impl.h  verilog_axi_cc_impl.cc  verilog_axi_cc_impl.h  verilog_axi_ff_impl.cc  verilog_axi_ff_impl.h  verilog_axi_ii_impl.cc  verilog_axi_ii_impl.h  verilog_axi_ss_impl.cc  verilog_axi_ss_impl.h
python/: __init__.py
python/testcases/passthru/: saxi_passthru.v
python/verilog/: CMakeLists.txt  __init__.py  qa_verilog_axi_bb.py  qa_verilog_axi_ff.py  qa_verilog_axi_ii.py  qa_verilog_axi_ss.py
python/verilog/bindings/: CMakeLists.txt  python_bindings.cc  verilog_axi_bb_python.cc  verilog_axi_ff_python.cc  verilog_axi_ii_python.cc  verilog_axi_ss_python.cc
python/verilog/bindings/docstrings/: verilog_axi_bb_pydoc_template.h  verilog_axi_ff_pydoc_template.h  verilog_axi_ii_pydoc_template.h  verilog_axi_ss_pydoc_template.h
swig/: CMakeLists.txt
